<resources>
    <string name="app_name">bs_test</string>


    <string name="error_message_network">Network error</string>
    <string name="error_message_unknown">Unknown error</string>
    <string name="filter_totle">Filters</string>
    <string name="filter_sort_by_stars">Stars</string>
    <string name="filter_sort_by_forks">Forks</string>
    <string name="filter_sort_by_last_update">Last Update</string>
    <string name="filter_order_by_ascending">Ascending</string>
    <string name="filter_order_by_descending">Descending</string>
    <string name="filter_sort_by_title">Sort By</string>
    <string name="filter_order_by_title">Order By</string>
    <string name="filter_apply">Apply</string>
    <string name="filter_sort_by_clear">Clear</string>
</resources>